2001-12-16  Patrick Burke  <takhisisii@yahoo.com.au>
	* tools/Makefile.am, cmanip.cc: A simple command-line conf/ file
	editor. Added under no-install.

2001-12-15  Patrick Burke  <takhisisii@yahoo.com.au>
	* usecode/ucxt/opcodes.txt: Updated opcodes callis and calli to output
	intrinsic names
	* usecode/ucxt/: Code cleanup and commenting.

2001-12-14  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Fixed set_item_quantity() so it returns
	correct value, and doesn't delete items not in world.

2001-12-14  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/vgafile.cc: fixed broken debugging output

2001-12-14  Tristan Tarrant <nadir@users.sourceforge.net>
	* bggame.cc, sigame.cc: new game displays correctly in spanish

2001-12-14  Tristan Tarrant <nadir@users.sourceforge.net>
	* data/audiooptions.shp: made 10 pixels taller
	* audio/Audio.*: allow user-configurable music looping
	* gumps/AudioOptions_gump.*: UI for above
	* Makefile.am: alpha_kludges.h and mingw_kludges.h should be in 
	noinst_HEADERS, not in EXTRA_DIST
	* debian/.cvsignore: usual stuff

2001-12-14  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc (Duel_schedule): Look for practice targets.

2001-12-13  Patrick Burke <takhisisii@yahoo.com.au>
	* usecode/ucxt/src/opcodes.cc: Included a 'fix' for undeclared __STRING
	under solaris.

2001-12-13  Tristan Tarrant <nadir@users.sourceforge.net>
	* configure.in, Makefile.am, debian/Makefile.am: fixes for make dist
	to include new debian stuff

2001-12-13  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc,drag.h (Dragging_info): New class to handle dragging.

2001-12-09  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc: Don't set schedules of party members.

2001-12-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gumps/gump_utils.h: #include <cstring>

2001-12-12  Tristan Tarrant <nadir@users.sourceforge.net>
	* gumps/gump_utils.h: #include <string.h> to get it to compile under