@@ -1,3 +1,8 @@
+2001-12-16  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* actors.cc: Fiddling with combat formulae.  Combat skill counts
+	for more, and 'level' is no longer used at all.
+
 2001-12-16  Patrick Burke  <takhisisii@yahoo.com.au>
 	* tools/Makefile.am, cmanip.cc: A simple command-line conf/ file
 	editor. Added under no-install.
